@@ -117,7 +117,6 @@ https://www.quantopian.com/posts/some-code-from-ernie-chans-new-book-implemented
 
 24/04/2017
 Reorganize GitHub into folders for easy future reference. 
-<<<<<<< HEAD
 #TODO: 
 - change import in major .py programs to reflect new changes. 
 - create a readme for statistical tests for instructions.
@@ -134,3 +133,12 @@ regardless for future strategies.
 
 28/04/2017
 update position.py using Decimal
+
+04/05/2017
+Finished Johansen
+
+Remember to install johansen and stock API
+
+05/05/2017
+Cleaned up new_hist.py, vectorized file will import historical data from new_hist.py
+Working on CAPM test and vectorized backtesting
